# MAO-Platform

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: frontend.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: main.py
apps/api/src/a2a/: agent_cards.py  client.py  executor.py
apps/api/src/agents/: base.py  code_agent.py  data_agent.py  model_router.py  registry.py  writer_agent.py
apps/api/src/api/: middleware.py  routes.py  schemas.py
apps/api/src/config/: prompts.py  settings.py
apps/api/src/graph/: edges.py  graph.py  nodes.py  scheduler.py  state.py  supervisor.py
apps/api/src/persistence/: checkpointer.py  knowledge_graph.py  memory_consolidator.py  memory_retriever.py  memory_store.py
apps/api/src/streaming/: event_mapper.py  sse.py  websocket.py
apps/api/src/tests/: conftest.py  test_recursion_guard.py
apps/api/src/tests/test_agents/: test_model_router.py  test_registry.py
apps/api/src/tests/test_api/: test_routes.py
apps/api/src/tests/test_graph/: test_graph_compilation.py  test_state.py
apps/api/src/tests/test_patterns/: test_cache_boundary.py  test_privacy_routing.py
apps/api/src/tests/test_streaming/: test_event_mapper.py
apps/api/src/tools/: code.py  documents.py  mcp_tools.py  memory_tools.py  search.py
apps/web/: Dockerfile  eslint.config.js  nginx.conf  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/: ErrorBoundary.tsx
apps/web/src/components/panels/: AgentBuilderPanel.tsx  AgentConfigPanel.tsx  ConversationTreePanel.tsx  DetailPanel.tsx  Toolbar.tsx
apps/web/src/flow/: FlowCanvas.tsx
apps/web/src/flow/edges/: AgentFlowEdge.tsx  HandoffEdge.tsx  ToolCallEdge.tsx
apps/web/src/flow/hooks/: useAutoLayout.ts  useExpandCollapse.ts
apps/web/src/flow/memory/: EntityNode.tsx  MemoryGraphCanvas.tsx  RelationshipEdge.tsx
apps/web/src/flow/nodes/: ExecutionStepNode.tsx  GroupContainerNode.tsx  OrchestratorNode.tsx  SpecialistNode.tsx  ThinkingStreamNode.tsx  index.tsx
apps/web/src/flow/utils/: layoutEngine.ts  nodeFactory.ts
apps/web/src/hooks/: index.ts
apps/web/src/protocol/: customEvents.ts  eventHandlers.ts  middleware.ts
apps/web/src/services/: AGUIEventRouter.ts  PretextService.ts  WebSocketService.ts
apps/web/src/stores/: agentStatusStore.ts  graphStore.ts  memoryGraphStore.ts  streamingStore.ts
apps/web/src/stores/selectors/: graphSelectors.ts
apps/web/src/styles/: globals.css
apps/web/src/types/: flow.ts
apps/web/src/utils/: constants.ts  graphTransforms.ts
data/: agents.json
docs/: RECURSION_FIX_AND_CONVERSATION_VIEW.md
mao-platform/: .dockerignore  .env.example  README.md  docker-compose.yml  pnpm-lock.yaml  turbo.json
mao-platform/.github/workflows/: backend.yml
mao-platform/apps/api/: Dockerfile  langgraph.json  pyproject.toml
mao-platform/apps/api/src/agents/: base.py  code_agent.py  data_agent.py  research_agent.py  writer_agent.py
mao-platform/apps/api/src/api/: routes.py  schemas.py
mao-platform/apps/api/src/config/: settings.py
mao-platform/apps/api/src/graph/: graph.py  nodes.py
mao-platform/apps/api/src/observability/: langfuse_handler.py  otel_setup.py  telemetry.py
mao-platform/apps/api/src/persistence/: checkpointer.py  memory_retriever.py  memory_store.py
mao-platform/apps/api/src/streaming/: event_mapper.py  sse.py
mao-platform/apps/api/src/tools/: mcp_tools.py
mao-platform/apps/web/: Dockerfile  index.html  tsconfig.json  tsconfig.node.json
mao-platform/apps/web/src/__tests__/: conversationStore.test.ts
mao-platform/apps/web/src/components/: ErrorBoundary.tsx
mao-platform/apps/web/src/flow/: FlowCanvas.tsx
mao-platform/apps/web/src/stores/: conversationStore.ts  graphStore.ts  memoryGraphStore.ts
mao-platform/apps/web/src/styles/: globals.css
mao-platform/apps/web/src/types/: nodes.ts  stores.ts
mao-platform/apps/web/src/utils/: modelUtils.ts
mao-platform/scripts/: dev.ps1  seed.py
scripts/: dev.sh  generate-types.sh
src/todo_assistant/: __init__.py  ai_engine.py  cli.py  models.py  run_server.py  server.py  storage.py
src/todo_assistant/static/: app.js  index.html  style.css
tests/: test_ai_parsing.py  test_api.py  test_models.py  test_storage.py
(+25 files in other folders)
